[update] general update page

--- a/assets.html
+++ b/assets.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>CRM - Client</title>
+    <title>CRM DEKA - Client</title>
 
     <!-- Custom fonts for this template-->
     <link
