--- a/change-password.html
+++ b/change-password.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SB Admin 2 - Login</title>
+    <title>CRM DEKA - Login</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -22,6 +22,7 @@
       href="https://api.fontshare.com/css?f[]=satoshi@300,301,400,401,500,501,700,701,900,901,1,2&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/32px.png" type="image/png" />
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.css" rel="stylesheet" />
