--- a/client-detail.html
+++ b/client-detail.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>CRM - Detail Client</title>
+    <title>CRM DEKA - Detail Client</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -39,6 +39,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"
       rel="stylesheet"
     />
+    <link rel="icon" href="/32px.png" type="image/png" />
   </head>
 
   <body id="page-top">
@@ -300,7 +301,9 @@
             <!-- Breadcrumbs -->
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Klien</a></li>
+                <li class="breadcrumb-item">
+                  <a href="/client.html">Klien</a>
+                </li>
                 <li class="breadcrumb-item active" aria-current="page">
                   Vivo Mobile Indonesia
                 </li>
