--- a/proposal.html
+++ b/proposal.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>CRM - Client</title>
+    <title>CRM DEKA - Client</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -38,6 +38,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"
       rel="stylesheet"
     />
+    <link rel="icon" href="/32px.png" type="image/png" />
   </head>
 
   <body id="page-top">
@@ -215,9 +216,7 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <i class="fas fa-bell fa-fw"></i>
-                  <!-- Counter - Alerts -->
-                  <span class="badge badge-danger badge-counter">3+</span>
+                  <img class="mr-2" src="img/bell.svg" />
                 </a>
                 <!-- Dropdown - Alerts -->
                 <div
@@ -269,13 +268,11 @@
                 </div>
               </li>
 
-              <div class="topbar-divider d-none d-sm-block"></div>
-
               <!-- Nav Item - User Information -->
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="#"
+                  href="/settings.html"
                   id="userDropdown"
                   role="button"
                   aria-haspopup="true"
@@ -283,7 +280,7 @@
                 >
                   <img
                     class="img-profile rounded-circle mr-2"
-                    src="img/undraw_profile.svg"
+                    src="img/profile-navbar.svg"
                   />
                   <span class="d-none d-lg-inline text-gray-600 small mr-2"
                     >Joseph Augustus</span
@@ -299,7 +296,7 @@
             <h1 class="bold-heading-2 neutral-800--text mb-4">Proposal</h1>
             <div class="card shadow mb-4 p-4">
               <div
-                class="d-flex flex-row align-items-center justify-content-between mb-2"
+                class="d-flex flex-row align-items-center justify-content-between mb-4"
               >
                 <div class="col-4 p-0">
                   <div class="d-flex align-items-center flex-nowrap">
@@ -593,7 +590,6 @@
                         <div
                           class="modal fade"
                           id="modal-detail-1"
-                          data-backdrop="static"
                           data-keyboard="false"
                           tabindex="-1"
                           aria-labelledby="staticBackdropLabel"
@@ -764,7 +760,6 @@
                         <div
                           class="modal fade"
                           id="modal-detail-2"
-                          data-backdrop="static"
                           data-keyboard="false"
                           tabindex="-1"
                           aria-labelledby="staticBackdropLabel"
