--- a/reset-password.html
+++ b/reset-password.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SB Admin 2 - Login</title>
+    <title>CRM DEKA - Reset Password</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -25,6 +25,7 @@
       href="https://api.fontshare.com/css?f[]=satoshi@300,301,400,401,500,501,700,701,900,901,1,2&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/32px.png" type="image/png" />
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.css" rel="stylesheet" />
@@ -60,8 +61,8 @@
               Reset Password
             </p>
             <p class="regular-body neutral-700--text text-center">
-              Amet minim mollit non deserunt ullamco est sit aliqua. Amet minim
-              mollit non deserunt ullamco est sit aliqua.
+              Masukkan email yang terhubung dengan akun Anda dan kami akan
+              mengirimkan tautan untuk mengubah password.
             </p>
           </div>
 
