--- a/send-email-success.html
+++ b/send-email-success.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SB Admin 2 - Login</title>
+    <title>CRM DEKA - Send Email Success</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -30,6 +30,7 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.css" rel="stylesheet" />
     <link href="css/typography.css" rel="stylesheet" />
+    <link rel="icon" href="/32px.png" type="image/png" />
   </head>
 
   <body class="bg-white" style="height: 100vh">
