--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     </div> -->
                     <div class="dropdown no-arrow">
                       <button
-                        id="filterDropdown"
+                        id="filterDropdownHitrate"
                         class="btn dropdown-toggle bold-body primary-600--text"
                         style="border: 1px solid #d0d5dd"
                         data-toggle="dropdown"
@@ -715,7 +715,10 @@
                               Pengaturan
                             </p>
                             <button
+                              type="button"
+                              role="button"
                               class="btn bg-primary-600 btn-dark bold-body"
+                              onclick="handleSubmitFilterHitrate()"
                             >
                               Terapkan
                             </button>
@@ -732,7 +735,7 @@
                               >
                                 <input
                                   type="text"
-                                  id="datepicker"
+                                  id="datepicker-hitrate"
                                   class="form-control"
                                   placeholder="Pilih tahun"
                                 />
@@ -761,7 +764,7 @@
                                 >
                                   <input
                                     type="text"
-                                    id="comparation-datepicker"
+                                    id="comparation-datepicker-hitrate"
                                     class="form-control"
                                     placeholder="Pilih tahun project"
                                   />
@@ -773,32 +776,7 @@
                       </form>
                     </div>
                   </div>
-                  <div class="row no-gutters mb-3">
-                    <div class="d-flex align-items-center mr-3">
-                      <span
-                        class="bg-primary-600 mr-2"
-                        style="width: 14px; height: 14px; border-radius: 4px"
-                      ></span>
-                      <p
-                        id="legend1-hitrate-chart"
-                        class="regular-metadata mb-0"
-                      >
-                        Hitrate 2022
-                      </p>
-                    </div>
-                    <div class="d-flex align-items-center">
-                      <span
-                        class="bg-secondary-600 mr-2"
-                        style="width: 14px; height: 14px; border-radius: 4px"
-                      ></span>
-                      <p
-                        id="legend2-hitrate-chart"
-                        class="regular-metadata mb-0"
-                      >
-                        Hitrate 2021
-                      </p>
-                    </div>
-                  </div>
+                  <div class="row no-gutters mb-3" id="legend-hitrate"></div>
                   <div class="card-body p-0">
                     <div class="chart-area">
                       <canvas id="hitRateChart"></canvas>
@@ -1206,7 +1184,7 @@
             const obj = {
               Penjualan: '#264179',
               Pendapatan: '#F7A533',
-              Target: '#5C6575'
+              Target: '#E7446B'
             }
 
             return obj[val]
@@ -1263,7 +1241,54 @@
         }
       }
 
-      const handleSubmitFilterProject = (e) => {
+      const handleSubmitFilterHitrate = () => {
+        $('#legend-hitrate').empty()
+        const comparisonChecked = $(`#comparation-hitrate`).is(':checked')
+        const year = $('#datepicker-hitrate').val() || new Date().getFullYear()
+        const comparationYear =
+          comparisonChecked && $('#comparation-datepicker-hitrate').val()
+
+        const tempArray = [year, comparationYear]
+
+        $('#filterDropdownHitrate').dropdown('toggle')
+
+        const colorPicker = (val) => {
+          const obj = {
+            0: '#264179',
+            1: '#F7A533'
+          }
+
+          return obj[val]
+        }
+
+        tempArray.forEach((item, index) => {
+          const element = item
+            ? `<div class="d-flex align-items-center mr-3">
+                        <span
+                          class="mr-2"
+                          style="border: 1px solid ${colorPicker(
+                            index
+                          )}; width: 24px"
+                        ></span>
+                        <p class="regular-metadata mb-0">
+                          Hitrate ${item}
+                        </p>
+                      </div>`
+            : ''
+          $('#legend-hitrate').append(element)
+        })
+
+        const tempArr = tempArray.map((item, index) => {
+          if (item && index == 0) return 'hitrate'
+          if (comparisonChecked) {
+            if (item && index == 1) return 'hitrateComparison'
+          }
+        })
+
+        hitrateChartHandler(tempArr, year, comparationYear)
+      }
+
+      const handleSubmitFilterProject = () => {
         const tempArray = []
         $('#projectCheckboxList :checkbox:checked')
           .not('#comparation-project')
