[fix] state button and opacity line

--- a/client-detail.html
+++ b/client-detail.html
@@ -713,8 +713,7 @@
                             <button
                               type="button"
                               id="filterDropdown"
-                              class="btn bold-body dropdown-toggle primary-600--text"
-                              style="border: 1px solid #264179"
+                              class="btn btn-outline-primary bold-body dropdown-toggle primary-600--text"
                               data-toggle="dropdown"
                               aria-haspopup="true"
                               aria-expanded="false"
