--- a/client.html
+++ b/client.html
@@ -316,7 +316,7 @@
                     <button
                       type="button"
                       id="filterDropdown"
-                      class="btn dropdown-toggle bold-body primary-600--text"
+                      class="btn btn-outline-primary dropdown-toggle bold-body primary-600--text"
                       style="border: 1px solid #d0d5dd"
                       data-toggle="dropdown"
                       aria-haspopup="true"
@@ -797,8 +797,7 @@
                   </div>
                   <button
                     type="button"
-                    class="btn bold-body primary-600--text"
-                    style="border: 1px solid #d0d5dd"
+                    class="btn btn-outline-primary bold-body primary-600--text"
                   >
                     <i class="fas fa-file-export primary-600--text mr-2"></i>
                     Export CSV
