--- a/index.html
+++ b/index.html
@@ -1160,6 +1160,9 @@
           })
         handleSubmitFilterProject()
         $('#filterDropdownProject').dropdown('toggle')
+
+        handleSubmitFilterHitrate()
+        $('#filterDropdownHitrate').dropdown('toggle')
       })
       const handleSubmitFilter = () => {
         const tempArray = []
