--- a/project.html
+++ b/project.html
@@ -321,7 +321,7 @@
                   <div class="dropdown no-arrow">
                     <button
                       id="filterDropdown"
-                      class="btn dropdown-toggle bold-body primary-600--text"
+                      class="btn btn-outline-primary dropdown-toggle bold-body primary-600--text"
                       style="border: 1px solid #d0d5dd"
                       data-toggle="dropdown"
                       aria-haspopup="true"
