--- a/reset-password.html
+++ b/reset-password.html
@@ -66,7 +66,7 @@
             </p>
           </div>
 
-          <form class="user">
+          <form id="formEmail" class="user" novalidate>
             <div class="mb-5">
               <div class="form-group mb-4">
                 <p
@@ -81,19 +81,32 @@
                   id="exampleInputEmail"
                   aria-describedby="emailHelp"
                   placeholder="Masukkan email anda"
+                  required
                 />
+                <div class="invalid-feedback">Please input email.</div>
               </div>
             </div>
-            <a
+            <button
+              onclick="validate()"
+              type="button"
               href="send-email-success.html"
               class="btn btn-dark bg-primary-600 btn-user btn-block bold-body"
             >
               Kirim
-            </a>
+            </button>
           </form>
         </div>
       </div>
     </div>
+
+    <script>
+      const validate = () => {
+        $('#formEmail').addClass('was-validated')
+        if ($('#formEmail')[0].checkValidity()) {
+          window.location.pathname = 'send-email-success.html'
+        }
+      }
+    </script>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
