--- a/settings.html
+++ b/settings.html
@@ -526,8 +526,7 @@
                   <div class="row no-gutters justify-content-end">
                     <button
                       id="cancelButton"
-                      class="btn primary-600--text mr-2 bold-body"
-                      style="border: 1px solid #264179"
+                      class="btn btn-outline-primary primary-600--text mr-2 bold-body"
                       onclick="disableField()"
                       disabled
                     >
@@ -775,8 +774,7 @@
                                 </div>
                                 <div class="row no-gutters justify-content-end">
                                   <button
-                                    class="btn bg-white mr-2 primary-600--text"
-                                    style="border: 1px solid #264179"
+                                    class="btn btn-outline-primary mr-2 primary-600--text"
                                     data-dismiss="modal"
                                   >
                                     Batal
@@ -1044,8 +1042,7 @@
                                         class="row no-gutters justify-content-end"
                                       >
                                         <button
-                                          class="btn bg-white mr-2 primary-600--text"
-                                          style="border: 1px solid #264179"
+                                          class="btn btn-outline-primary mr-2 primary-600--text"
                                           data-dismiss="modal"
                                         >
                                           Batal
@@ -1105,8 +1102,7 @@
                                           <button
                                             type="button"
                                             data-dismiss="modal"
-                                            class="btn primary-600--text bold-body btn-block"
-                                            style="border: 1px solid #264179"
+                                            class="btn primary-600--text bold-body btn-block btn-outline-primary"
                                           >
                                             Batal
                                           </button>
@@ -1238,8 +1234,7 @@
                                           <button
                                             type="button"
                                             data-dismiss="modal"
-                                            class="btn primary-600--text bold-body btn-block"
-                                            style="border: 1px solid #264179"
+                                            class="btn primary-600--text bold-body btn-block btn-outline-primary"
                                           >
                                             Batal
                                           </button>
@@ -1371,8 +1366,7 @@
                                           <button
                                             type="button"
                                             data-dismiss="modal"
-                                            class="btn primary-600--text bold-body btn-block"
-                                            style="border: 1px solid #264179"
+                                            class="btn primary-600--text bold-body btn-block btn-outline-primary"
                                           >
                                             Batal
                                           </button>
